# precision_plan_moving_target

./: .gitignore  debug.html  debug_bieudo.py  kalman_tuning_reader.py  square_loop.py  target_pose_samples.csv  test.txt  timing_collector.py
deploy/: clear.sh  setup_autostart_precision_land.sh
services/: aruco-tracker.service  eth0-force-10mbps.service  gimbal-controller.service  microxrce-agent.service  precision-land.service  rtsp-camera.service  run_gimbal_controller.sh  run_kalman_filter.sh  run_precision_land.sh  run_rtsp_cam.sh  run_taggpio_monitor.sh  taggpio_monitor.service  target-pose-fusion.service
src/aruco_tracker/: ArucoTracker.cpp  ArucoTracker.hpp  CMakeLists.txt
src/gimbal_controller/: CMakeLists.txt  GimbalController.cpp  GimbalController.hpp  package.xml
src/kalman_filter/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.hpp  package.xml
src/kalman_filter/cfg/: params.yaml
src/precision_land/: CMakeLists.txt  PrecisionLand.cpp  PrecisionLand.hpp  package.xml  params_land.yaml
src/precision_land/cfg/: params.yaml
src/precision_land/launch/: precision_landing_system.launch.py
src/precision_land_viz/: CMakeLists.txt  package.xml  tag_pose_visualizer.cpp
src/px4-ros2-interface-lib/examples/cpp/modes/mode_with_executor/: package.xml
src/ros_gz/: README.md
src/ros_gz/.github/workflows/: ros2-ci.yml
src/ros_gz/ros_gz/: CHANGELOG.rst  package.xml
src/ros_gz/ros_gz_bridge/: CHANGELOG.rst  package.xml
src/ros_gz/ros_gz_image/: CHANGELOG.rst  package.xml
src/ros_gz/ros_gz_interfaces/: CHANGELOG.rst  package.xml
src/ros_gz/ros_gz_sim/: CHANGELOG.rst  package.xml
src/ros_gz/ros_gz_sim/launch/: gz_sim.launch.py.in
src/ros_gz/ros_gz_sim_demos/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign_bridge/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign_gazebo/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign_gazebo_demos/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign_image/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign_interfaces/: CHANGELOG.rst  package.xml
src/ros_gz/test_ros_gz_bridge/: CHANGELOG.rst  package.xml
src/target_pose_fusion/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.hpp  package.xml  params_kalman.yaml
src/vision_opencv/cv_bridge/: CHANGELOG.rst  package.xml
src/vision_opencv/image_geometry/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/vision_opencv/image_geometry/doc/: conf.py  index.rst  python_api.rst
src/vision_opencv/image_geometry/image_geometry/: cameramodels.py
src/vision_opencv/image_geometry/test/: CMakeLists.txt  directed.py
src/vision_opencv/opencv_tests/: CHANGELOG.rst  package.xml  setup.py
src/vision_opencv/vision_opencv/: CHANGELOG.rst  package.xml
