<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>precision_land_viz</name>
  <version>0.0.1</version>
  <description>Simulation-only visualization for precision landing (Gazebo markers)</description>
  <maintainer email="vogiahuy257@gmail.com">Võ Gia Huy</maintainer>
  <license>none</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>

  <depend>gz-transport13</depend>
  <depend>gz-msgs10</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>